--- a/sections/feature-blog.liquid
+++ b/sections/feature-blog.liquid
@@ -1,103 +1,100 @@
 
 <div class="feature_blog">
-<div class="container">
-    <div class="row">
-        {%- for article in blog.articles limit: 1 -%}
-        <div class="col-lg-4">
-          <a href="{{ article.url }}">
-            {%- if article.image -%}
-              {{ article | img_url: '150x150', scale: 2 | img_tag: '' }}
-            {%- endif -%}
+  <div class="container">
+      <div class="row">
+          {%- for article in blog.articles limit: 1 -%}
+          <div class="col-lg-4">
+            <a href="{{ article.url }}">
+              {%- if article.image -%}
+              <img data-src="{{ article | img_url: 'master'}}" alt="{{ article.title }}" class="lazyload img-fluid">
+                
+              {%- endif -%}
+            
+            </a>
+            
+          </div>
+      <div class="col-lg-8">
+        
+          <div class="title">
+            <a href="{{ article.url }}"><h2>{{ article.title }}</h2></a>
+          </div>
+          <div class="meta-blog">
+           
+              <span>
+                <img data-src="{{ 'author.svg' | asset_url }}" alt="author-icon" class="lazyload img-fluid">
+                {{ article.author }}
+              </span>
           
-          </a>
-    </div>
-    <div class="col-lg-8">
-        <div class="title">
-            <h2>{{ article.title }}</h2>
-        </div>
-        <div class="meta-blog">
-          {%- if section.settings.blog_show_author -%}
-            <span>
-              By {{ article.author }}
-            </span>
-          {%- endif -%}
-  
-          {%- if section.settings.blog_show_date -%}
-            <span>
-              {{ article.published_at | time_tag: format: 'month_year' }}
-            </span>
-          {%- endif -%}
-          {%- if article.tags.size > 0 -%}
-            <ul aria-label="{{ 'blogs.article.tags' }}">
-            {%- for tag in article.tags -%}
-                <li>
-                <a href="{{ blog.url }}/tagged/{{ tag | handle }}">{{ tag }}</a>
-                </li>
-            {%- endfor -%}
-            </ul>
+    
+            {%- if section.settings.blog_show_date -%}
+              <span>
+                <img data-src="{{ 'date.svg' | asset_url }}" alt="date-icon" class="lazyload img-fluid">
+                {{ article.published_at | time_tag: format: 'month_year' }}
+              </span>
             {%- endif -%}
-        </div>
-        <div class="content-blog"> 
-          {%- if article.excerpt.size > 0 -%}
-            {{ article.excerpt }}
-          {%- else -%}
-            {{ article.content | strip_html | truncate: 150 }}
-          {%- endif -%}
-        </div>
-         
-        </div>
-      {%- endfor -%}
-    </div>
-</div>
-
-</div>
-
-
-
-{% schema %}
-{
-  "name": "Blog posts",
-  "class": "index-section",
-  "settings": [
-    {
-      "type": "text",
-      "id": "title",
-      "label": "Heading",
-      "default": "Blog posts"
-    },
-    {
-      "id": "blog",
-      "type": "blog",
-      "label": "Blog"
-    },
-    {
-      "type": "checkbox",
-      "id": "blog_show_author",
-      "label": "Show author",
-      "default": false
-    },
-    {
-      "type": "checkbox",
-      "id": "blog_show_date",
-      "label": "Show date",
-      "default": true
-    },
-    {
-      "type": "checkbox",
-      "id": "show_view_all",
-      "label": "Show 'View all' button",
-      "default": false
-    }
-  ],
-  "presets": [
-    {
-      "name": "Blog posts",
-      "category": "Blog",
-      "settings": {
-        "blog": "News",
-        "post_limit": 3
+            {%- if article.tags.size > 0 -%}
+            <span><img data-src="{{ 'tags.svg' | asset_url }}" alt="tags-icon" class="lazyload img-fluid">
+             
+              {%- for tag in article.tags -%}
+              {% if forloop.first == true %}
+              {%else %},{% endif %}
+                  <a href="{{ blog.url }}/tagged/{{ tag | handle }}">{{ tag }}</a>
+                 
+              {%- endfor -%}
+            </span>
+              {%- endif -%}
+          </div>
+          <div class="content-blog"> 
+            {%- if article.excerpt.size > 0 -%}
+              <p>{{ article.excerpt }}</p>
+            {%- else -%}
+          <p>{{ article.content | strip_html | truncate: 250 }}</p>
+            {%- endif -%}
+          </div>
+        
+          </div>
+        {%- endfor -%}
+      </div>
+  </div>
+  
+  </div>
+  
+  
+  
+  {% schema %}
+  {
+    "name": "Blog posts",
+    "class": "index-section",
+    "settings": [
+      {
+        "type": "text",
+        "id": "title",
+        "label": "Heading",
+        "default": "Blog posts"
+      },
+      {
+        "id": "blog",
+        "type": "blog",
+        "label": "Blog"
+      },
+      {
+        "type": "checkbox",
+        "id": "blog_show_author",
+        "label": "Show author",
+        "default": false
+      },
+      {
+        "type": "checkbox",
+        "id": "blog_show_date",
+        "label": "Show date",
+        "default": true
       }
-    }
-  ]
-}
-{% endschema %}
+    ],
+    "presets": [
+      {
+        "name": "Blog posts",
+        "category": "Blog"
+      }
+    ]
+  }
+  {% endschema %}
