--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -1,7 +1,13 @@
 <script src="{{ 'collection-filters-form.js' | asset_url }}" defer="defer"></script>
-
+<style>
+  svg {
+    width: 30px;
+}menu-drawer.mobile-facets__wrapper.medium-hide.large-up-hide {
+    display: none;
+}
+</style>
 {%- assign sort_by = collection.sort_by | default: collection.default_sort_by -%}
-
+<div class="container">
 <div class="page-width collection-filters" id="main-collection-filters" data-id="{{ section.id }}">
   {%- if section.settings.enable_filtering or section.settings.enable_sorting -%}
     {%- assign total_active_values = 0 -%}
@@ -146,7 +152,7 @@
               </noscript>
             </div>
 
-            <div class="active-facets active-facets-desktop">
+            <div class="active-facets active-facets-desktop d-none">
               {%- for filter in collection.filters -%}
                 {%- for value in filter.active_values -%}
                   <facet-remove>
@@ -204,7 +210,7 @@
             </div>
           {%- endif -%}
 
-          <div class="collection-product-count light" role="status">
+          <div class="collection-product-count light d-none" role="status">
             <p id="CollectionProductCountDesktop" class="collection-product-count__text">
               {%- if collection.products_count == collection.all_products_count -%}
                 {{ 'sections.collection_template.product_count_simple' | t: count: collection.products_count }}
@@ -398,7 +404,7 @@
       </details>
     </menu-drawer>
 
-    <div class="active-facets active-facets-mobile {% unless section.settings.collapse_on_larger_devices %} medium-hide large-up-hide{% endunless %}">
+    <div class="active-facets d-none active-facets-mobile {% unless section.settings.collapse_on_larger_devices %} medium-hide large-up-hide{% endunless %}">
       {%- for filter in collection.filters -%}
         {%- for value in filter.active_values -%}
           <facet-remove>
@@ -430,7 +436,7 @@
         </a>
       </facet-remove>
     </div>
-    <div class="collection-product-count light{% unless section.settings.collapse_on_larger_devices %} medium-hide large-up-hide{% endunless %}" role="status">
+    <div class="collection-product-count d-none light{% unless section.settings.collapse_on_larger_devices %} medium-hide large-up-hide{% endunless %}" role="status">
       <p id="CollectionProductCount" class="collection-product-count__text">
         {%- if collection.products_count == collection.all_products_count -%}
           {{ 'sections.collection_template.product_count_simple' | t: count: collection.products_count }}
@@ -448,7 +454,7 @@
 </div>
 
 <div id="CollectionProductGrid">
-  {%- paginate collection.products by section.settings.products_per_page -%}
+  {%- paginate collection.products by s12 -%}
     {%- if collection.products.size == 0 -%}
       <div class="collection collection--empty page-width" id="main-collection-product-grid" data-id="{{ section.id }}">
         <div class="loading-overlay"></div>
@@ -558,7 +564,7 @@
     {
       "type": "checkbox",
       "id": "enable_filtering",
-      "default": true,
+      "default": false,
       "label": "t:sections.main-collection-product-grid.settings.enable_filtering.label",
       "info": "t:sections.main-collection-product-grid.settings.enable_filtering.info"
     },
