--- a/sections/main-search.liquid
+++ b/sections/main-search.liquid
@@ -1,77 +1,5 @@
-{{ 'component-card.css' | asset_url | stylesheet_tag }}
-{{ 'component-price.css' | asset_url | stylesheet_tag }}
-{{ 'component-product-grid.css' | asset_url | stylesheet_tag }}
-
-<link rel="stylesheet" href="{{ 'component-search.css' | asset_url }}" media="print" onload="this.media='all'">
-
-<noscript>{{ 'component-search.css' | asset_url | stylesheet_tag }}</noscript>
-
-<style>
-  .template-search__search {
-    margin: 0 auto;
-    max-width: 29.5rem;
-  }
-
-  .template-search__search .search {
-    margin-top: 3rem;
-  }
-
-  .template-search__results {
-    margin-top: 6rem;
-  }
-
-  .template-search--empty {
-    padding-bottom: 18rem;
-  }
-
-  .template-search .grid__item--small:not(:last-child) {
-    padding-bottom: 0.5rem;
-  }
-
-  @media screen and (min-width: 750px) {
-    .template-search__search {
-      max-width: 47.8rem;
-    }
-
-    .template-search .grid__item--small:not(:last-child) {
-      padding-bottom: 1rem;
-    }
-  }
-
-  .search__button .icon {
-    height: 1.8rem;
-  }
-</style>
-
 <div class="template-search spaced-section{% unless search.performed and search.results.size > 0 %} template-search--empty{% endunless %}">
   <div class="page-width center">
-    {%- if search.performed -%}
-      <h1 class="h2">{{ 'templates.search.title' | t }}</h1>
-    {%- else -%}
-      <h1 class="h2">{{ 'general.search.search' | t }}</h1>
-    {%- endif -%}
-    <div class="template-search__search">
-      <form action="{{ routes.search_url }}" method="get" role="search" class="search">
-        <div class="field">
-          <input
-            class="search__input field__input"
-            id="Search-In-Template"
-            type="search"
-            name="q"
-            value="{{ search.terms | escape }}"
-            {% if search.performed %}autofocus{% endif %}
-            placeholder="{{ 'general.search.search' | t }}"
-          >
-          <label class="field__label" for="Search-In-Template" aria-hidden="true">{{ 'general.search.search' | t }}</label>
-          <input name="options[prefix]" type="hidden" value="last">
-          <button type="submit" class="search__button field__button" aria-label="{{ 'general.search.search' | t }}">
-            <svg class="icon icon-search">
-              <use xlink:href="#icon-search">
-            </svg>
-          </button>
-        </div>
-      </form>
-    </div>
     {%- if search.performed -%}
       <p class="element-margin" role="status">
         {%- if search.results_count == 0 -%}
@@ -85,9 +13,9 @@
   {%- if search.performed and search.results.size > 0 -%}
     {% paginate search.results by 24 %}
       <div class="template-search__results page-width">
-        <ul class="grid grid--4-col-desktop grid--3-col-tablet grid--2-col grid--one-third-max grid--quarter-max negative-margin product-grid" role="list">
+        <ul class="row" role="list">
           {%- for item in search.results -%}
-            <li class="grid__item{% unless item.object_type == 'product' %} grid__item--small{% endunless %}">
+            <li class="col-lg-3">
               {%- case item.object_type -%}
                 {%- when 'product' -%}
                   {%- capture product_settings -%}{%- if section.settings.product_show_vendor -%}vendor,{%- endif -%}title,price{%- endcapture -%}
