--- a/sections/main-404.liquid
+++ b/sections/main-404.liquid
@@ -9,15 +9,15 @@
     }
   }
 </style>
-
-<div class="template-404 page-width page-margin center">
-  <p>
-    {{ 'templates.404.subtext' | t }}
-  </p>
-  <h1 class="title">
-    {{ 'templates.404.title' | t }}
+<div class="container">
+  <div class="row"></div>
+<div class="col-lg-12 text-center">
+  <h2>
+    Page Not Found
   </h1>
-  <a href="{{ routes.all_products_collection_url }}" class="button">
+  <a href="{{ routes.all_products_collection_url }}" class="btn-green btn-custom">
     {{ 'general.continue_shopping' | t }}
   </a>
+</div>
+</div>
 </div>
