--- a/sections/main-page.liquid
+++ b/sections/main-page.liquid
@@ -1,9 +1,4 @@
-<link rel="stylesheet" href="{{ 'section-main-page.css' | asset_url }}" media="print" onload="this.media='all'">
-<link rel="stylesheet" href="{{ 'component-rte.css' | asset_url }}" media="print" onload="this.media='all'">
-
-<noscript>{{ 'section-main-page.css' | asset_url | stylesheet_tag }}</noscript>
-<noscript>{{ 'component-rte.css' | asset_url | stylesheet_tag }}</noscript>
-
+<div class="default-page">
 <div class="container">
   <div class="row">
   <div class="col-lg-12">
@@ -11,7 +6,7 @@
   </div>
 </div>
 </div>
-
+</div>
 {% schema %}
 {
   "name": "t:sections.main-page.name",
