--- a/sections/accordian.liquid
+++ b/sections/accordian.liquid
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-    <div class="heading text-center">
+    <div class="title-black text-center">
       {% if section.settings.heading-text != blank %}
-        <h2 class="title ls-m text-left">{{ section.settings.heading-text }}</h2>
+        <h2 class="title h2 ls-m">{{ section.settings.heading-text }}</h2>
       {% endif %}
     </div>
     <div class="accordion" id="accordionExample">
