--- a/sections/general-content.liquid
+++ b/sections/general-content.liquid
@@ -2,13 +2,13 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
-				<div class="heading text-center">
+				<div class="title-black text-center">
 					{% if section.settings.heading != blank %}
-						<h2>{{ section.settings.heading }}</h2>
+						<h5 class="h5 text-black text36">{{ section.settings.heading }}</h5>
 					{% endif %}
 				
 					{% if section.settings.subheading != blank %}
-						<h3>{{ section.settings.subheading }}</h3>
+						<h2 class="h2">{{ section.settings.subheading }}</h2>
 					{% endif %}
 				</div>
 			</div>
