--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -1,4 +1,4 @@
-<div class="about-us" style="background-image: url('{{ section.settings.background_image | img_url : 'master' }}');">
+<div class="about-us">
   
          {% capture image_layout %}
         <div class="col-lg-4">
@@ -12,14 +12,14 @@
         </div>
         {% endcapture %}
         <div class="container" >
-         <div class="row">
+         <div class="row align-items-center"> 
 			{% if section.settings.layout == 'left' %}
             	{{ image_layout }}
         	{% endif %}
 			<div class="col-lg-8">
-				<div class="heading">
+				<div class="title-black text-center">
 					{% if section.settings.heading != blank %}
-						<h2 class="text-center">{{ section.settings.heading }}</h2>
+						<h2 class="h2">{{ section.settings.heading }}</h2>
 					{% endif %}
 				</div>
 				<div class="content text-center">
@@ -37,8 +37,7 @@
 {
    "name":"Image with text",
    "settings":[
-      {
-         "id":"background_image",
+      {         
          "type":"image_picker",
          "label":"Background image"
       },
